--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.6.7",
+    "@grpc/proto-loader": "^0.6.13",
+    "google-protobuf": "^3.20.1",
+    "grpc-web": "^1.3.1",
+    "http2-wrapper": "^2.1.11",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-json-pretty": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
