--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "^0.6.13",
+    "@improbable-eng/grpc-web": "^0.15.0",
     "google-protobuf": "^3.20.1",
     "grpc-web": "^1.3.1",
     "http2-wrapper": "^2.1.11",
