--- a/client/.env-example
+++ b/client/.env-example
@@ -1,8 +1,10 @@
 # Note that not all variables here might be in use for your selected configuration
 
-# Prisma
+## Prisma
+
 DATABASE_URL=
 
-# Next Auth
+## Next Auth
+
 GITHUB_ID=
 GITHUB_SECRET=
